# CompanionAgent

./: README.md  app.py  main.py  ollama_host_agent_server.py  ollama_simple_search_agent_server.py  pyproject.toml  run_ollama_client.py  start.sh  stop.sh  test_canvas_update.py  utils.py
agents/: adk_agent.py  ollama_agent.py
agents/utils/: remote_agent_connection.py
client/: main.py  pyproject.toml
common/: agent_task_manager.py  types.py
common/client/: card_resolver.py  client.py
common/server/: server.py
server/: pyproject.toml
static/css/: style.css
static/js/: agents.js  canvas.js  conversation.js  main.js  websocket.js
templates/: index.html
